[package]
name = "rocksdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.7"
bytes = "1.0"
nix = "0.22"
async-trait = "0.1"
crc32c = "0.6"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
