[package]
name = "rocksdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.0"
crc32c = "0.6"
crossbeam = "0.8"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
nix = "0.22"
rand = "0.7"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
time = "0.1"

[dependencies.lazy_static]
version = "1.2"

[dev-dependencies]
tempfile = "3.1"
